Obtencion de roles con modulos
