# docs/swagger.json
@@ -53,6 +53,63 @@
                 }
             }
         },
+        "/roles": {
+            "get": {
+                "security": [
+                    {
+                        "JWT": []
+                    }
+                ],
+                "description": "Get all roles",
+                "consumes": [
+                    "application/json"
+                ],
+                "produces": [
+                    "application/json"
+                ],
+                "tags": [
+                    "Roles"
+                ],
+                "summary": "Get Roles",
+                "parameters": [
+                    {
+                        "maximum": 10,
+                        "minimum": 5,
+                        "type": "integer",
+                        "name": "limit",
+                        "in": "query",
+                        "required": true
+                    },
+                    {
+                        "minimum": 1,
+                        "type": "integer",
+                        "name": "page",
+                        "in": "query",
+                        "required": true
+                    }
+                ],
+                "responses": {
+                    "200": {
+                        "description": "OK",
+                        "schema": {
+                            "$ref": "#/definitions/api.getRolesResponse"
+                        }
+                    },
+                    "401": {
+                        "description": "StatusUnauthorized",
+                        "schema": {
+                            "type": "string"
+                        }
+                    },
+                    "500": {
+                        "description": "StatusInternalServerError",
+                        "schema": {
+                            "type": "string"
+                        }
+                    }
+                }
+            }
+        },
         "/users": {
             "get": {
                 "security": [
@@ -407,7 +464,6 @@
                 "role_id",
                 "salary",
                 "second_last_name",
-                "user_type_id",
                 "username"
             ],
             "properties": {
@@ -440,9 +496,6 @@
                 },
                 "second_last_name": {
                     "type": "string"
-                },
-                "user_type_id": {
-                    "type": "integer"
                 },
                 "username": {
                     "type": "string"
@@ -477,6 +530,23 @@
                 },
                 "second_last_name": {
                     "type": "string"
+                }
+            }
+        },
+        "api.getRolesResponse": {
+            "type": "object",
+            "properties": {
+                "page": {
+                    "type": "integer"
+                },
+                "roles": {
+                    "type": "array",
+                    "items": {
+                        "$ref": "#/definitions/db.Role"
+                    }
+                },
+                "total": {
+                    "type": "integer"
                 }
             }
         },
@@ -545,13 +615,47 @@
                 "updated_at": {
                     "type": "string"
                 },
-                "user_type_id": {
-                    "type": "integer"
-                },
-                "user_type_name": {
+                "username": {
+                    "type": "string"
+                }
+            }
+        },
+        "db.Module": {
+            "type": "object",
+            "properties": {
+                "created_at": {
                     "type": "string"
                 },
-                "username": {
+                "id": {
+                    "type": "integer"
+                },
+                "name": {
+                    "type": "string"
+                },
+                "updated_at": {
+                    "type": "string"
+                }
+            }
+        },
+        "db.Role": {
+            "type": "object",
+            "properties": {
+                "created_at": {
+                    "type": "string"
+                },
+                "id": {
+                    "type": "integer"
+                },
+                "modules": {
+                    "type": "array",
+                    "items": {
+                        "$ref": "#/definitions/db.Module"
+                    }
+                },
+                "name": {
+                    "type": "string"
+                },
+                "updated_at": {
                     "type": "string"
                 }
             }
